k8s/backend/backend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deploy
  namespace: user-management
  labels:
    app: backend-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      labels:
        app: backend-app
    spec:
      containers:
        - name: backend-app
          image: docker.io/nginx:1.25.2
          ports:
            - containerPort: 8080

          # Inject all config & secret vars
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 4
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /api/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 3
            failureThreshold: 10

          startupProbe:
            httpGet:
              path: /api/health
              port: 8080
            failureThreshold: 30
            periodSeconds: 10

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
