k8s/backend/backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-clusterip-service
  namespace: user-management
spec:
  selector:
    app: backend-app
  ports:
    - protocol: TCP
      port: 80       
      targetPort: 8080
  type: ClusterIP
